Fixed resolution to make full reaper image display in full screen. Running into weird bug where the menu select is overflowing off the screen. Appeared to be present before this development started.

--- a/client/public/style/menu.css
+++ b/client/public/style/menu.css
@@ -6,7 +6,10 @@ body {
     margin: 0;
     background: url("../../public/images/reaper.png") center center fixed;
     /*Ivakhnenko-art*/
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-color: rgb(7, 17, 19);
+    /*overflow: hidden;*/
 }
 
 h1 {
@@ -19,7 +22,7 @@ h1 {
 button {
     font-size: 1.2em;
     color: #f10303;
-    padding: 10px 20px;
+    padding: 10px 20px 0px;
     margin-bottom: 1vw;
     background-color: rgba(0, 0, 0, 0.09);
     border: none;
